--- a/po/stellarium/fr.po
+++ b/po/stellarium/fr.po
@@ -18,14 +18,14 @@ msgstr ""
 "Project-Id-Version: fr\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-18 19:27+0700\n"
-"PO-Revision-Date: 2013-03-18 17:33+0000\n"
+"PO-Revision-Date: 2013-03-22 20:44+0000\n"
 "Last-Translator: Nicolas Martignoni <Unknown>\n"
 "Language-Team: <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-03-19 05:23+0000\n"
-"X-Generator: Launchpad (build 16532)\n"
+"X-Launchpad-Export-Date: 2013-03-23 04:37+0000\n"
+"X-Generator: Launchpad (build 16540)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1259
 msgid "Meridian"
@@ -1791,7 +1791,7 @@ msgstr "Tupi-Guarani"
 
 #: src/translations.h:178
 msgid "Tongan"
-msgstr "tonguienne"
+msgstr "Tonguienne"
 
 #: src/translations.h:179
 msgid "Western"
