--- a/po/stellarium/gl.po
+++ b/po/stellarium/gl.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-18 19:27+0700\n"
-"PO-Revision-Date: 2013-03-14 20:55+0000\n"
+"PO-Revision-Date: 2013-03-22 06:53+0000\n"
 "Last-Translator: Manuel Rosales Graña <manuel.rosales@mundo-r.com>\n"
 "Language-Team: Galician <gl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-03-19 05:23+0000\n"
-"X-Generator: Launchpad (build 16532)\n"
+"X-Launchpad-Export-Date: 2013-03-23 04:37+0000\n"
+"X-Generator: Launchpad (build 16540)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1259
 msgid "Meridian"
@@ -7170,27 +7170,27 @@ msgstr ""
 #. TRANSLATORS: Full phrase: Exoplanet detected by transit
 #: plugins/Exoplanets/src/Exoplanet.cpp:172
 msgid "by transit"
-msgstr ""
+msgstr "por tránsito"
 
 #. TRANSLATORS: Full phrase: Exoplanet detected by radial velocity
 #: plugins/Exoplanets/src/Exoplanet.cpp:174
 msgid "by radial velocity"
-msgstr ""
+msgstr "por velocidade radial"
 
 #. TRANSLATORS: Full phrase: Exoplanet detected by imaging
 #: plugins/Exoplanets/src/Exoplanet.cpp:176
 msgid "by imaging"
-msgstr ""
+msgstr "por imaxe"
 
 #. TRANSLATORS: Full phrase: Exoplanet detected by astrometry
 #: plugins/Exoplanets/src/Exoplanet.cpp:179
 msgid "by astrometry"
-msgstr ""
+msgstr "por astrometría"
 
 #. TRANSLATORS: Full phrase: Exoplanet detected by microlensing
 #: plugins/Exoplanets/src/Exoplanet.cpp:181
 msgid "by microlensing"
-msgstr ""
+msgstr "por microlentes"
 
 #: plugins/Exoplanets/src/Exoplanet.cpp:221
 msgid "Metallicity"
@@ -7255,7 +7255,7 @@ msgstr "Ano de descuberta"
 #. TRANSLATORS: Exoplanet detected
 #: plugins/Exoplanets/src/Exoplanet.cpp:250
 msgid "Detected"
-msgstr ""
+msgstr "Detectado"
 
 #: plugins/Exoplanets/src/gui/ExoplanetsDialog.cpp:110
 msgid "Exoplanets Plug-in"
