Launchpad automatic translations update.

--- a/po/stellarium-skycultures/sk.po
+++ b/po/stellarium-skycultures/sk.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-17 19:35+0700\n"
-"PO-Revision-Date: 2013-03-20 16:48+0000\n"
+"PO-Revision-Date: 2013-03-23 11:10+0000\n"
 "Last-Translator: Pavol Gajdoš <Unknown>\n"
 "Language-Team: Slovak <sk@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-03-21 04:36+0000\n"
-"X-Generator: Launchpad (build 16532)\n"
+"X-Launchpad-Export-Date: 2013-03-24 04:42+0000\n"
+"X-Generator: Launchpad (build 16540)\n"
 
 #: nebulae/default/ngc2000names.dat:218
 msgid "47 Tuc"
@@ -612,7 +612,7 @@ msgstr "Hmlovina motýľ"
 
 #: nebulae/default/ngc2000names.dat:395
 msgid "Iris nebula"
-msgstr ""
+msgstr "Hmlovina dúhovka"
 
 #: nebulae/default/ngc2000names.dat:396
 msgid "Fireworks galaxy"
