--- a/po/stellarium-skycultures/it.po
+++ b/po/stellarium-skycultures/it.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-17 19:35+0700\n"
-"PO-Revision-Date: 2013-03-17 07:21+0000\n"
-"Last-Translator: Alexander Wolf <Unknown>\n"
+"PO-Revision-Date: 2013-03-24 19:04+0000\n"
+"Last-Translator: Guybrush88 <Unknown>\n"
 "Language-Team: Italian <it@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-03-18 04:39+0000\n"
-"X-Generator: Launchpad (build 16532)\n"
+"X-Launchpad-Export-Date: 2013-03-25 04:35+0000\n"
+"X-Generator: Launchpad (build 16540)\n"
 
 #: nebulae/default/ngc2000names.dat:218
 msgid "47 Tuc"
@@ -616,19 +616,19 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:396
 msgid "Fireworks galaxy"
-msgstr ""
+msgstr "Galassia fuochi d'artificio"
 
 #: nebulae/default/ngc2000names.dat:397
 msgid "Whale galaxy"
-msgstr ""
+msgstr "Galassia balena"
 
 #: nebulae/default/ngc2000names.dat:398
 msgid "Needle galaxy"
-msgstr ""
+msgstr "Galassia spillo"
 
 #: nebulae/default/ngc2000names.dat:399
 msgid "Pearl cluster"
-msgstr ""
+msgstr "Blocco della perla"
 
 #: nebulae/default/ngc2000names.dat:400
 msgid "S Normae cluster"
@@ -3958,71 +3958,71 @@ msgstr "Gli sciatori"
 
 #: skycultures/tongan/constellation_names.eng.fab:1
 msgid "Toloatonga"
-msgstr ""
+msgstr "Toloatonga"
 
 #: skycultures/tongan/constellation_names.eng.fab:2
 msgid "Lua tangata"
-msgstr ""
+msgstr "Lua tangata"
 
 #: skycultures/tongan/constellation_names.eng.fab:3
 msgid "Toloa"
-msgstr ""
+msgstr "Toloa"
 
 #: skycultures/tongan/constellation_names.eng.fab:4
 msgid "Tu'ulalupe"
-msgstr ""
+msgstr "Tu'ulalupe"
 
 #: skycultures/tongan/constellation_names.eng.fab:5
 msgid "Toloalahi"
-msgstr ""
+msgstr "Toloalahi"
 
 #: skycultures/tongan/constellation_names.eng.fab:6
 msgid "Fungasia"
-msgstr ""
+msgstr "Fungasia"
 
 #: skycultures/tongan/constellation_names.eng.fab:7
 msgid "Tuinga ika"
-msgstr ""
+msgstr "Tuinga ika"
 
 #: skycultures/tongan/constellation_names.eng.fab:8
 msgid "Houmatoloa"
-msgstr ""
+msgstr "Houmatoloa"
 
 #: skycultures/tongan/constellation_names.eng.fab:9
 msgid "Fatanalua"
-msgstr ""
+msgstr "Fatanalua"
 
 #: skycultures/tongan/constellation_names.eng.fab:10
 msgid "Ae e'Uvea"
-msgstr ""
+msgstr "Ae e'Uvea"
 
 #: skycultures/tongan/constellation_names.eng.fab:11
 msgid "Kapakau'o'tafahi"
-msgstr ""
+msgstr "Kapakau'o'tafahi"
 
 #: skycultures/tongan/star_names.fab:1
 msgid "Ma'afutoka"
-msgstr ""
+msgstr "Ma'afutoka"
 
 #: skycultures/tongan/star_names.fab:2
 msgid "Ma'afulele"
-msgstr ""
+msgstr "Ma'afulele"
 
 #: skycultures/tongan/star_names.fab:3
 msgid "Velitoa hififo"
-msgstr ""
+msgstr "Velitoa hififo"
 
 #: skycultures/tongan/star_names.fab:4
 msgid "Velitoa hahake"
-msgstr ""
+msgstr "Velitoa hahake"
 
 #: skycultures/tongan/star_names.fab:5
 msgid "Hikule'o"
-msgstr ""
+msgstr "Hikule'o"
 
 #: skycultures/tongan/star_names.fab:6
 msgid "Monuafe"
-msgstr ""
+msgstr "Monuafe"
 
 #: skycultures/tongan/star_names.fab:7
 msgid "Motuliki"
@@ -4968,7 +4968,7 @@ msgstr "Merga"
 
 #: skycultures/western/star_names.fab:142
 msgid "Kochab"
-msgstr ""
+msgstr "Kochab"
 
 #: skycultures/western/star_names.fab:143
 msgid "Zubenelgenubi"
