--- a/po/stellarium-skycultures/nb.po
+++ b/po/stellarium-skycultures/nb.po
@@ -9,14 +9,14 @@ msgstr ""
 "Project-Id-Version: nb\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-17 19:35+0700\n"
-"PO-Revision-Date: 2013-03-17 07:24+0000\n"
-"Last-Translator: Alexander Wolf <Unknown>\n"
+"PO-Revision-Date: 2013-03-24 11:26+0000\n"
+"Last-Translator: FreewareTips <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-03-18 04:40+0000\n"
-"X-Generator: Launchpad (build 16532)\n"
+"X-Launchpad-Export-Date: 2013-03-25 04:35+0000\n"
+"X-Generator: Launchpad (build 16540)\n"
 "X-Poedit-Country: NORWAY\n"
 "X-Poedit-Language: Norwegian\n"
 
@@ -525,7 +525,7 @@ msgstr "Øyenstikkerhopen"
 
 #: nebulae/default/ngc2000names.dat:367
 msgid "Elephant's Trunk nebula"
-msgstr ""
+msgstr "Elefantsnabel-tåken"
 
 #: nebulae/default/ngc2000names.dat:368 nebulae/default/ngc2000names.dat:369
 #: nebulae/default/ngc2000names.dat:370 nebulae/default/ngc2000names.dat:371
@@ -611,27 +611,27 @@ msgstr "Lille Magellanske sky"
 
 #: nebulae/default/ngc2000names.dat:394
 msgid "Bow-Tie nebula"
-msgstr ""
+msgstr "Bumerangtåken"
 
 #: nebulae/default/ngc2000names.dat:395
 msgid "Iris nebula"
-msgstr ""
+msgstr "Iris-tåken"
 
 #: nebulae/default/ngc2000names.dat:396
 msgid "Fireworks galaxy"
-msgstr ""
+msgstr "Fyrverkeri-galaksen"
 
 #: nebulae/default/ngc2000names.dat:397
 msgid "Whale galaxy"
-msgstr ""
+msgstr "Hval-galaksen"
 
 #: nebulae/default/ngc2000names.dat:398
 msgid "Needle galaxy"
-msgstr ""
+msgstr "Nål-galaksen"
 
 #: nebulae/default/ngc2000names.dat:399
 msgid "Pearl cluster"
-msgstr ""
+msgstr "Perlehopen"
 
 #: nebulae/default/ngc2000names.dat:400
 msgid "S Normae cluster"
