--- a/po/stellarium-skycultures/ar.po
+++ b/po/stellarium-skycultures/ar.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-17 19:35+0700\n"
-"PO-Revision-Date: 2012-12-29 20:22+0000\n"
+"PO-Revision-Date: 2013-03-25 13:28+0000\n"
 "Last-Translator: Khalid AlAjaji <Unknown>\n"
 "Language-Team: Arabic <ar@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-03-18 04:35+0000\n"
-"X-Generator: Launchpad (build 16532)\n"
+"X-Launchpad-Export-Date: 2013-03-26 04:42+0000\n"
+"X-Generator: Launchpad (build 16540)\n"
 
 #: nebulae/default/ngc2000names.dat:218
 msgid "47 Tuc"
@@ -522,7 +522,7 @@ msgstr "حشد اليعسوب النجمي"
 
 #: nebulae/default/ngc2000names.dat:367
 msgid "Elephant's Trunk nebula"
-msgstr ""
+msgstr "سديم خرطوم الفيل"
 
 #: nebulae/default/ngc2000names.dat:368 nebulae/default/ngc2000names.dat:369
 #: nebulae/default/ngc2000names.dat:370 nebulae/default/ngc2000names.dat:371
@@ -604,35 +604,35 @@ msgstr "سديم السلحفاة الكوكبي"
 
 #: nebulae/default/ngc2000names.dat:393
 msgid "Small Magellanic Cloud"
-msgstr ""
+msgstr "السحابة الماجلانية الصغيرة"
 
 #: nebulae/default/ngc2000names.dat:394
 msgid "Bow-Tie nebula"
-msgstr ""
+msgstr "سديم ربطة العنق"
 
 #: nebulae/default/ngc2000names.dat:395
 msgid "Iris nebula"
-msgstr ""
+msgstr "سديم السوسن"
 
 #: nebulae/default/ngc2000names.dat:396
 msgid "Fireworks galaxy"
-msgstr ""
+msgstr "مجرّة الألعاب النارية"
 
 #: nebulae/default/ngc2000names.dat:397
 msgid "Whale galaxy"
-msgstr ""
+msgstr "مجرة الحوت"
 
 #: nebulae/default/ngc2000names.dat:398
 msgid "Needle galaxy"
-msgstr ""
+msgstr "مجرّة الإبرة"
 
 #: nebulae/default/ngc2000names.dat:399
 msgid "Pearl cluster"
-msgstr ""
+msgstr "مجرة اللؤلؤ"
 
 #: nebulae/default/ngc2000names.dat:400
 msgid "S Normae cluster"
-msgstr ""
+msgstr "حشد مسطرة النقاش النجمي"
 
 #: skycultures/arabic/constellation_names.eng.fab:1
 msgid "The Shackled Woman"
@@ -3958,75 +3958,75 @@ msgstr "عدائو التزلج"
 
 #: skycultures/tongan/constellation_names.eng.fab:1
 msgid "Toloatonga"
-msgstr ""
+msgstr "تولواتونغا"
 
 #: skycultures/tongan/constellation_names.eng.fab:2
 msgid "Lua tangata"
-msgstr ""
+msgstr "لوا تانغاتا"
 
 #: skycultures/tongan/constellation_names.eng.fab:3
 msgid "Toloa"
-msgstr ""
+msgstr "تولوا"
 
 #: skycultures/tongan/constellation_names.eng.fab:4
 msgid "Tu'ulalupe"
-msgstr ""
+msgstr "توؤلالوب"
 
 #: skycultures/tongan/constellation_names.eng.fab:5
 msgid "Toloalahi"
-msgstr ""
+msgstr "تولوالاهي"
 
 #: skycultures/tongan/constellation_names.eng.fab:6
 msgid "Fungasia"
-msgstr ""
+msgstr "فونغاسيا"
 
 #: skycultures/tongan/constellation_names.eng.fab:7
 msgid "Tuinga ika"
-msgstr ""
+msgstr "توينغا إيكا"
 
 #: skycultures/tongan/constellation_names.eng.fab:8
 msgid "Houmatoloa"
-msgstr ""
+msgstr "هاوماتولوا"
 
 #: skycultures/tongan/constellation_names.eng.fab:9
 msgid "Fatanalua"
-msgstr ""
+msgstr "فاتانالوا"
 
 #: skycultures/tongan/constellation_names.eng.fab:10
 msgid "Ae e'Uvea"
-msgstr ""
+msgstr "اإي إيؤفيا"
 
 #: skycultures/tongan/constellation_names.eng.fab:11
 msgid "Kapakau'o'tafahi"
-msgstr ""
+msgstr "كاباكاوؤتافاهي"
 
 #: skycultures/tongan/star_names.fab:1
 msgid "Ma'afutoka"
-msgstr ""
+msgstr "ماءافوتوكا"
 
 #: skycultures/tongan/star_names.fab:2
 msgid "Ma'afulele"
-msgstr ""
+msgstr "ماءافوليل"
 
 #: skycultures/tongan/star_names.fab:3
 msgid "Velitoa hififo"
-msgstr ""
+msgstr "فيليتوا هيفيفو"
 
 #: skycultures/tongan/star_names.fab:4
 msgid "Velitoa hahake"
-msgstr ""
+msgstr "فيليتوا هاهاكي"
 
 #: skycultures/tongan/star_names.fab:5
 msgid "Hikule'o"
-msgstr ""
+msgstr "هيكوليئو"
 
 #: skycultures/tongan/star_names.fab:6
 msgid "Monuafe"
-msgstr ""
+msgstr "مونوافي"
 
 #: skycultures/tongan/star_names.fab:7
 msgid "Motuliki"
-msgstr ""
+msgstr "موتوليكي"
 
 #: skycultures/tupi/constellation_names.eng.fab:1
 msgid "White Ostrich"
@@ -4968,7 +4968,7 @@ msgstr "المعزقة ‎"
 
 #: skycultures/western/star_names.fab:142
 msgid "Kochab"
-msgstr ""
+msgstr "أنور الفرقدين"
 
 #: skycultures/western/star_names.fab:143
 msgid "Zubenelgenubi"
