--- a/po/stellarium/zh_CN.po
+++ b/po/stellarium/zh_CN.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-18 19:27+0700\n"
-"PO-Revision-Date: 2013-03-05 05:05+0000\n"
-"Last-Translator: 罗佳伟 <luojiaweil@gmail.com>\n"
+"PO-Revision-Date: 2013-03-27 09:52+0000\n"
+"Last-Translator: forest93 <Unknown>\n"
 "Language-Team: Chinese (Hong Kong) <zh_HK@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-03-19 05:31+0000\n"
-"X-Generator: Launchpad (build 16532)\n"
+"X-Launchpad-Export-Date: 2013-03-28 04:40+0000\n"
+"X-Generator: Launchpad (build 16546)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1259
 msgid "Meridian"
@@ -257,7 +257,7 @@ msgstr "太空船"
 
 #: src/core/StelCore.cpp:1419
 msgid "Correction is disabled. Use only if you know what you are doing!"
-msgstr ""
+msgstr "目前禁止修正。如果您不了解您正在做什么，请不要使用此功能！"
 
 #: src/core/StelCore.cpp:1422
 #, qt-format
@@ -266,6 +266,9 @@ msgid ""
 "Henriksson in his article <em>Einstein's Theory of Relativity Confirmed by "
 "Ancient Solar Eclipses</em> (%1). See for more info %2here%3."
 msgstr ""
+"这个有历史意义的公式是由 C. Schoch 于 1931年得到的，被 G. Henriksson "
+"在他的文章《古代的日食证明了爱因斯坦的相对论》[<em>Einstein's Theory of Relativity Confirmed by "
+"Ancient Solar Eclipses</em>]（%1）。要了解更多信息，请点击%2这里%3。"
 
 #: src/core/StelCore.cpp:1425
 #, qt-format
@@ -273,6 +276,8 @@ msgid ""
 "This empirical equation was published by G. M. Clemence in the article "
 "<em>On the system of astronomical constants</em> (%1)."
 msgstr ""
+"这个经验公式由 G. M. Clemence 在文章《关于天文常数系统》[<em>On the system of astronomical "
+"constants</em>]（%1）中公布。"
 
 #: src/core/StelCore.cpp:1428
 #, qt-format
@@ -282,6 +287,9 @@ msgid ""
 "<em>Astronomical Formulae for Calculators</em>. It was also adopted in the "
 "PC program SunTracker Pro."
 msgstr ""
+"此公式基于 Spencer Jones（%1）对1650年后期太阳、月球以及行星观测的研究，并被 Jean Meeus "
+"在他的《用于计算器的天文学公式》[<em>Astronomical Formulae for Calculators</em>] 中使用。计算机程序 "
+"SunTracker Pro 也使用了这一公式。"
 
 #: src/core/StelCore.cpp:1432
 msgid ""
@@ -289,6 +297,9 @@ msgid ""
 "adopted in the <em>Astronomical Ephemeris</em> and in the <em>Canon of Solar "
 "Eclipses</em> by Mucke & Meeus (1983)."
 msgstr ""
+"这是一个由被 Mucke 和 Meeus 于1983年在《星历表》[<em>Astronomical "
+"Ephemeris</em>]和《日食的法规》[<em>Canon of Solar Eclipses</em>]中使用的 IAU (1952) "
+"公式稍加修改之后的版本。"
 
 #: src/core/StelCore.cpp:1436
 msgid ""
@@ -297,6 +308,8 @@ msgid ""
 "relation was also implicitly adopted in the syzygy tables of Goldstine "
 "(1973)."
 msgstr ""
+"塔克曼[Tuckerman]的表格（1962年，1964年）以5天和10天的间隔列出了太阳、月球和行星从公元前601年到公元1649年的位置。戈德斯坦[G"
+"oldstine]的表格（1973年）也含蓄地采用了相同的关系。"
 
 #: src/core/StelCore.cpp:1440
 #, qt-format
@@ -305,6 +318,9 @@ msgid ""
 "article <em>The accelerations of the earth and moon from early astronomical "
 "observations</em> (%1)."
 msgstr ""
+"此公式被 P. M. Muller 和 F. R. Stephenson 在文章《早期天文观测中的地球和月球的加速效应》[<em>The "
+"accelerations of the earth and moon from early astronomical "
+"observations</em>] （%1）中公布。"
 
 #: src/core/StelCore.cpp:1443
 #, qt-format
@@ -339,7 +355,7 @@ msgstr ""
 
 #: src/core/StelCore.cpp:1455
 msgid "This algorithm is used in the PC planetarium program Guide 7."
-msgstr ""
+msgstr "天文馆程序 Guide 7 中使用了此算法。"
 
 #: src/core/StelCore.cpp:1458
 msgid ""
@@ -347,6 +363,9 @@ msgid ""
 "Eclipses: 1986-2035</em> (1987) and in his <em>Fifty Year Canon of Lunar "
 "Eclipses: 1986-2035</em> (1989)."
 msgstr ""
+"此算法由 F. Espenak 在他的《五十年的日食法规：1986-2035》[<em>Fifty Year Canon of Solar "
+"Eclipses: 1986-2035</em> ]（1987年）以及《五十年的日食法规：1986-2035》[<em>Fifty Year Canon "
+"of Solar Eclipses: 1986-2035</em> ]（1989年） 中给出。"
 
 #: src/core/StelCore.cpp:1461
 #, qt-format
