--- a/po/stellarium/en_GB.po
+++ b/po/stellarium/en_GB.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-18 19:27+0700\n"
-"PO-Revision-Date: 2013-03-10 23:42+0000\n"
-"Last-Translator: Andi Chandler <Unknown>\n"
+"PO-Revision-Date: 2013-03-28 17:53+0000\n"
+"Last-Translator: Alexander Wolf <Unknown>\n"
 "Language-Team: English (United Kingdom) <en_GB@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-03-19 05:30+0000\n"
-"X-Generator: Launchpad (build 16532)\n"
+"X-Launchpad-Export-Date: 2013-03-29 04:34+0000\n"
+"X-Generator: Launchpad (build 16546)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1259
 msgid "Meridian"
@@ -186,7 +186,7 @@ msgstr "Phase Angle: %1"
 #: src/core/modules/Planet.cpp:520
 #, qt-format
 msgid "Elongation: %1"
-msgstr "Copy text \t Elongation: %1"
+msgstr "Elongation: %1"
 
 #: src/core/modules/Planet.cpp:521
 #, qt-format
